--- a/modules/banner/build.gradle
+++ b/modules/banner/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.library'
-version = "1.4.10"
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    compileSdkVersion rootProject.ext.android["compileSdkVersion"]
+    buildToolsVersion rootProject.ext.android["buildToolsVersion"]
 
     defaultConfig {
-        minSdkVersion 11
-        targetSdkVersion 29
-        versionCode 41
-        versionName version
+        minSdkVersion rootProject.ext.android["minSdkVersion"]
+        targetSdkVersion rootProject.ext.android["targetSdkVersion"]
+        versionCode rootProject.ext.android["versionCode"]
+        versionName rootProject.ext.android["versionName"]
     }
     buildTypes {
         release {
@@ -17,14 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    lintOptions {
+   /* lintOptions {
         abortOnError false
-    }
+    }*/
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compileOnly  rootProject.ext.dependencies["androidx-appcompat"]
+    compileOnly  'androidx.appcompat:appcompat:1.0.2'
 }
 
 
