--- a/component/module_common/build.gradle
+++ b/component/module_common/build.gradle
@@ -87,5 +87,9 @@ dependencies {
     api project(path: ':modules:BaseRecyclerViewAdapterHelper')
     //banner
      api project(path:':modules:banner')
+    //垂直tablayout
+    api project(path:':modules:verticaltablayout')
+    //瀑布流
+    api project(path:':modules:flexibleflowlayout')
 
 }
